scripts/nullaway/nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8.txt
../nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:34: error: [NullAway] @NonNull static field skandium not initialized
    public static Skandium skandium;
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:129: error: [NullAway] dereferenced expression Main.hashmap.get(Main.byteToString(result.get(0).getHash())) is @Nullable
            System.out.println(s2.getSentence(Main.hashmap.get(Main.byteToString(result.get(0).getHash())).getBitmap()));
                                                                                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:130: error: [NullAway] dereferenced expression Main.hashmap.get(Main.byteToString(result.get(0).getHash())) is @Nullable
            System.out.println(Main.hashmap.get(Main.byteToString(result.get(0).getHash())).getBitmap());
                                                                                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Schema.java:90: error: [NullAway] parameter parts is @NonNull, but parameter in superclass method data.structures.SchemaInterface.split(int) is @Nullable
    public SchemaInterface[] split(int parts) {
                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Schema.java:100: error: [NullAway] parameter bitbelegung is @NonNull, but parameter in superclass method data.structures.SchemaInterface.getSentence(long) is @Nullable
    public String getSentence(long bitbelegung) {
                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Trie.java:57: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/data/structures/Trie.java:67: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return branch.word.get();
            ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
7 errors
